--- a/index.html
+++ b/index.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7ssk7</title>
+    <title>Artur "7ssk7" Kyurshin</title>
+    <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/script.js" defer></script>
+
+    <!-- ПЛАГИНЫ -->
+    <script src="./js/gsap/gsap.min.js"></script>
+    <script src="./js/gsap/ScrollSmoother.min.js"></script>
+    <script src="./js/gsap/ScrollTrigger.min.js"></script>
+
+    <!-- ФРЕЙМ -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
+
+    <!-- FONT -->
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="content">
+            <div class="elipse-1 elipse"></div>
+            <div class="elipse-2 elipse"></div>
+            <div class="elipse-3 elipse"></div>
+            <div class="elipse-4 elipse"></div>
+            <div class="container">
+                <header class="header">
+                    <nav>
+                        <ul class="header__menu">
+                            <li class="header__menu-items"><a href="#">About</a></li>
+                            <li class="header__menu-items"><a href="#">Achievements</a></li>
+                            <li class="header__menu-items"><a href="#">Gear and Settings</a></li>
+                            <li class="header__menu-items"><a href="#">Interviews</a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <main class="main">
+                    <!-- ПРЕВЬЮ -->
+                    <section class="ssk7-title">
+                        <div class="block-artur__info">
+                            <div class="block-artur-main__title">
+                                <h1 class="title__main">7ssk7</h1>
+                                <span class="subtitle__main">Artur “7ssk7” Kyurshin player <br> of team “Istanbul Wildcats”</span>
+                                <div class="block-artur__messangers">
+                                    <a href="#"><img src="./img/socials (1).svg" alt="socials" class="block-artur__messangers--items"></a>
+                                    <a href="#"><img src="./img/socials (2).svg" alt="socials" class="block-artur__messangers--items"></a>
+                                    <a href="#"><img src="./img/socials (3).svg" alt="socials" class="block-artur__messangers--items"></a>
+                                    <a href="#"><img src="./img/socials (4).svg" alt="socials" class="block-artur__messangers--items"></a>
+                                    <a href="#"><img src="./img/socials.svg" alt="socials" class="block-artur__messangers--items"></a>
+                                </div>
+                            </div>
+                            <div class="artur__img">
+                                <img  src="./img/7ssk7.svg" alt="7ssk7">
+                            </div>
+                        </div>
+                    </section>
+                    <!-- ОБ АРТУРЕ -->
+                    <section class="ssk7-about">
+                        <div class="ssk7-about__content">
+                            <h1 class="ssk7-about__title">About</h1>
+                            <div class="ssk7-about__banner">
+                                <img class="7ssk7-about__banner__img" src="./img/banner_about.svg" alt="About">
+                            </div>
+                        </div>
+                    </section>
+                    <!-- СЛАЙДЕР МАТЧИ -->
+                    <section class="slider__matches">
+                        <h1 class="slider__matches-title">Achievements</h1>
+                        .
+                    </section>
+                </main>
+              
+                <footer class="footer">
+
+                </footer>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
