--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <body>
     <div class="wrapper">
         <div class="content">
-            <div class="elipse-1 elipse"></div>
-            <div class="elipse-2 elipse"></div>
-            <div class="elipse-3 elipse"></div>
-            <div class="elipse-4 elipse"></div>
             <div class="container">
+                <div class="elipse-1 elipse"></div>
+                <div class="elipse-2 elipse"></div>
+                <div class="elipse-3 elipse"></div>
+                <div class="elipse-4 elipse"></div>
                 <header class="header">
                     <nav>
                         <ul class="header__menu">
@@ -56,11 +56,14 @@
                                 </div>
                             </div>
                             <div class="artur__img">
-                                <img  src="./img/7ssk7.svg" alt="7ssk7">
+                                <img src="./img/Component 1.svg" alt="7ssk7">
                             </div>
                         </div>
                     </section>
                     <!-- ОБ АРТУРЕ -->
+                    <div class="elipse-5 elipse"></div>
+                    <div class="elipse-6 elipse"></div>
+                    <div class="elipse-7 elipse"></div>
                     <section class="ssk7-about">
                         <div class="ssk7-about__content">
                             <h1 class="ssk7-about__title">About</h1>
@@ -71,8 +74,12 @@
                     </section>
                     <!-- СЛАЙДЕР МАТЧИ -->
                     <section class="slider__matches">
+                        <div class="elipse-8 elipse"></div>
                         <h1 class="slider__matches-title">Achievements</h1>
-                        .
+                        <!-- тут слайдер -->
+                        <div class="elipse-9 elipse"></div>
+                        <div class="elipse-10 elipse"></div>
+                        <div class="elipse-11 elipse"></div>
                     </section>
                 </main>
               
