--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
+       <!-- ПЛАГИНЫ -->
+       <script src="./js/gsap/gsap.min.js" defer></script>
+       <script src="./js/gsap/ScrollSmoother.min.js" defer></script>
+       <script src="./js/gsap/ScrollTrigger.min.js" defer></script>
     <script src="./js/script.js" defer></script>
+    <script src="./js/BlockNews.js" defer></script>
 
-    <!-- ПЛАГИНЫ -->
-    <script src="./js/gsap/gsap.min.js"></script>
-    <script src="./js/gsap/ScrollSmoother.min.js"></script>
-    <script src="./js/gsap/ScrollTrigger.min.js"></script>
+ 
 
     <!-- ФРЕЙМ -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css" />
@@ -64,7 +66,7 @@
                     <div class="elipse-5 elipse"></div>
                     <div class="elipse-6 elipse"></div>
                     <div class="elipse-7 elipse"></div>
-                    <section class="ssk7-about">
+                    <section class="ssk7-about">  
                         <div class="ssk7-about__content">
                             <h1 class="ssk7-about__title">About</h1>
                             <div class="ssk7-about__banner">
@@ -72,14 +74,19 @@
                             </div>
                         </div>
                     </section>
+                    <div class="elipse-9 elipse"></div>
+                    <div class="elipse-10 elipse"></div>
+                    <div class="elipse-11 elipse"></div>
+                    <div class="elipse-8 elipse"></div>
+                    <div class="elipse-12 elipse"></div>
+                    <h1 class="slider__matches-title">Achievements</h1>
                     <!-- СЛАЙДЕР МАТЧИ -->
                     <section class="slider__matches">
-                        <div class="elipse-8 elipse"></div>
-                        <h1 class="slider__matches-title">Achievements</h1>
+                        <!-- <h1 class="slider__matches-title">Achievements</h1> -->
                         <!-- тут слайдер -->
-                        <div class="elipse-9 elipse"></div>
-                        <div class="elipse-10 elipse"></div>
-                        <div class="elipse-11 elipse"></div>
+                        <div class="stock_order">
+                            <div class="stock_order"><img class="order_img" src="./img/slider1.svg" alt="stock"></div>
+                        </div>
                     </section>
                 </main>
               
